compiler/w_session/tests/errors/optimizable-if-true.w
fn main(a: u32, b: u32): u32 {
    if 1 {
        a
    } else {
        b
    }
}