compiler/w_session/tests/errors/optimizable-if-true.stderr
tests/errors/optimizable-if-true.w:2:8: error: condition evaluates to true
    if 1 {
       ^
